@@ -1,5 +1,6 @@
 plugins {
     application
+    id("org.graalvm.buildtools.native") version "0.10.3"
 }
 
 java {
@@ -16,4 +17,13 @@ dependencies {
 application {
     mainClass = "app.__pkg__.Main"
     applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+}
+
+graalvmNative {
+    binaries {
+        named("main") {
+            imageName.set("__APP_NAME__")
+            buildArgs.add("--enable-native-access=ALL-UNNAMED")
+        }
+    }
 }
